--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "supertest": "^6.0.1"
   },
   "dependencies": {
+    "dashdash": "^1.14.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsdom": "^16.4.0",
